test/typecheck/errors/bad-views3.boa
view sv {
	o: output sum of int;
	s := 2;

	o << 0;
}

v := sv/s;